--- a/src/components/Header/MyHeader.module.scss
+++ b/src/components/Header/MyHeader.module.scss
@@ -41,13 +41,15 @@
 .nameSite {
   font-size: 30px;
 }
-.containerHeaderButton{
+
+.containerHeaderButton {
   width: 250px;
   display: flex;
   justify-content: center;
   align-items: center;
   height: 100%;
 }
+
 .headerButton {
   background-color: #1f7d63;
   border: none;
@@ -60,32 +62,76 @@
   justify-content: space-around;
   align-items: center;
 }
-.headerButton:hover{
+
+.headerButton:hover {
   cursor: pointer;
   background-color: #279b7a;
 }
-.containerSearchInput{
+
+.containerSearchInput {
   display: flex;
   justify-content: center;
   align-items: center;
   width: 60%;
   height: 100%;
 }
-.searchInput{
-  width: 90%;
+
+.searchInput {
+  width: 80%;
   height: 50px;
   border: 1px solid;
   border-radius: 10px 0 0 10px;
+  box-sizing: border-box;
+  padding-left: 10px;
+  font-size: 16px;
 }
-.searchButton{
-  width: 5%;
+.searchInput::placeholder {
+  color: #ccc8c8;
+}
+
+
+.searchButton {
+  width: 50px;
   height: 50px;
-  border:none;
+  border: none;
   background-color: #1f7d63;
-  color:#fff;
+  color: #fff;
   border-radius: 0 10px 10px 0;
 }
-.searchButton:hover{
+.searchButton>svg {
+  height: 20px;
+}
+.searchButton:hover {
   cursor: pointer;
   background-color: #279b7a;
+}
+.containerIcon{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 150px;
+}
+.containerIcon>svg{
+  height: 35px;
+}
+.containerIcon>svg:hover{
+  cursor: pointer;
+  color:#279b7a;
+}
+.cartShopping {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  width: 90px;
+}
+.cartShopping>svg{
+  height: 35px;
+}
+.cartShopping>svg:hover{
+  cursor: pointer;
+  color:#279b7a;
+}
+.priceBasket {
+  font-size: 20px;
+  color: #279b7a;
 }
