--- a/src/pages/Main/Main.module.scss
+++ b/src/pages/Main/Main.module.scss
@@ -175,6 +175,7 @@
   padding: 10px;
   border: #808080 1px solid;
   box-sizing: border-box;
+  resize:none;  
 }
 .feedbackArea:focus{
   outline: none;
