--- a/src/components/Header/MyHeader.module.scss
+++ b/src/components/Header/MyHeader.module.scss
@@ -41,6 +41,10 @@
 .nameSite {
   font-size: 30px;
 }
+.nameSite>p:hover{
+  cursor: pointer;
+  color:#1f7d63;
+}
 
 .containerHeaderButton {
   width: 250px;
