--- a/src/pages/SignUp/SignUp.module.scss
+++ b/src/pages/SignUp/SignUp.module.scss
@@ -1,3 +1,84 @@
-.SignUp{
-  height: 44vh;
+.SignUp {
+  height: 80vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.signUpContainer {
+  width: 90%;
+  height: 90%;
+  display: flex;
+  justify-content: space-between;
+  flex-direction: column;
+}
+
+.title {
+  font-weight: 700;
+  font-size: 32px;
+}
+
+.title>p {
+  margin: 0;
+}
+
+.inputs {
+  display: flex;
+  justify-content: space-evenly;
+  flex-direction: column;
+  width: 600px;
+  height: 600px;
+}
+
+.signUpButtonContainer {
+  display: flex;
+  align-items: center;
+  width: 380px;
+  justify-content: space-between;
+}
+
+.signUpButtonContainer>p {
+  color: #1f7d63;
+  text-decoration: underline;
+}
+
+.signUpButtonContainer>p:hover {
+  cursor: pointer;
+}
+
+.signUpButton {
+  background-color: #1f7d63;
+  border: none;
+  border-radius: 5px;
+  font-size: 15px;
+  color: #fff;
+  width: 180px;
+  height: 40px;
+}
+
+.inputContainer {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+}
+
+.star {
+  color: red;
+}
+
+.signUpInput {
+  height: 40px;
+  border: #333333 solid 1px;
+  border-radius: 5px;
+  padding-left: 5px;
+  box-sizing: border-box;
+}
+
+.signUpInput:focus {
+  outline: none;
+  border: #808080 3px solid;
+}
+.signUpButton:hover{
+  cursor: pointer;
+  background-color:#279b7a;
 }
