added catalog and modal window

--- a/src/pages/Profile/Profile.module.scss
+++ b/src/pages/Profile/Profile.module.scss
@@ -1,7 +1,8 @@
 .Profile{
   display: flex;
   justify-content: center;
-  align-items: center;
+  align-items: start;
+  min-height: 44vh;
 }
 .profileContainer{
   width: 90%;
