--- a/src/pages/AdminPages/AddScale/AddScale.module.scss
+++ b/src/pages/AdminPages/AddScale/AddScale.module.scss
@@ -1,13 +1,11 @@
-.addNews {
-  min-height: 75vh;
+.addScale {
+  min-height: 45vh;
   display: flex;
   justify-content: center;
-  align-items: center;
 }
 
-.addNewsWindow {
-  min-width: 50%;
-  background-color: rgba($color: #d3d3d3, $alpha: .5);
+.addScaleWindow {
+  min-width: 90%;
   border-radius: 20px;
   min-height: 50vh;
   display: flex;
@@ -17,14 +15,13 @@
   flex-direction: column;
 }
 
-.addNewsContent {
+.addScaleContent {
   width: 90%;
   min-height: 90%;
 }
 
 .header {
   display: flex;
-  justify-content: center;
 }
 
 .header>h1 {
@@ -42,12 +39,17 @@
 }
 
 .dataInput {
-  font-weight: bold;
-  padding: 3px 5px;
+  height: 40px;
+  border: #333333 solid 1px;
   border-radius: 5px;
-  border: 1px solid #dadada;
-  margin: 15px 0;
+  padding-left: 5px;
+  box-sizing: border-box;
   width: 100%;
+  margin-bottom: 20px;
+}
+.contactsInput:focus {
+  outline: none;
+  border: #808080 3px solid;
 }
 
 .addPhoto {
@@ -103,16 +105,17 @@
 }
 
 .addButtonDIv>button {
-  padding: 10px 15px;
-  border: none;
-  border-radius: 10%;
-  background-color: #dadada;
-  font-weight: bold;
-  height: 35px;
+  background-color: #1f7d63;
+  border:none;
+  width: 200px;
+  height: 40px;
+  border-radius: 10px;
+  color:#fff;
+  font-size: 1rem;
 }
 
 .addButtonDIv>button:hover {
-  color: #fff;
+  background-color: #279b7a;
   cursor: pointer;
 }
 
@@ -128,6 +131,32 @@
   color: red;
   text-align: center;
 }
+
+.comboBoxCategory{
+  background-color: #1f7d63;
+  color:#fff;
+  width: 150px;
+  height: 30px;
+  border-radius: 5px;
+  box-sizing: border-box;
+  padding: 0 10px;
+}
+.comboBoxCategory:hover{
+  background-color: #279b7a;
+  cursor: pointer;
+}
+
+.comboBoxCategoryDiv{
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  width: 300px;
+}
+.comboBoxCategoryDiv>p{
+  font-size: 15px;
+  font-weight: bold;
+}
+
 @media (max-width: 700px) {
 .addNewsWindow{
   width: 70%;
