--- a/src/pages/AdminPages/AddCategoryScale/AddCategoryScale.module.scss
+++ b/src/pages/AdminPages/AddCategoryScale/AddCategoryScale.module.scss
@@ -70,6 +70,45 @@
   cursor: pointer;
 }
 
+.addPhoto {
+  width: 80%;
+  display: flex;
+  align-items: center;
+}
+
+.addPhoto>p {
+  font-size: 15px;
+  font-weight: bold;
+}
+
+.icon>svg {
+  height: 25px;
+}
+
+.icon {
+  margin-left: 15px;
+  width: 30px;
+  height: 30px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.icon:hover {
+  background-color: #dadada;
+  cursor: pointer;
+  border-radius: 10px;
+}
+
+.selectImg {
+  width: 50px;
+  height: 50px;
+}
+
+.selectImg:hover {
+  cursor: pointer;
+}
+
 @media (max-width: 700px) {
   .addCategoryScaleWindow {
     width: 70%;
