--- a/src/pages/Constructor/Constructor.module.scss
+++ b/src/pages/Constructor/Constructor.module.scss
@@ -16,6 +16,7 @@
   display: flex;
   width: 800px;
   justify-content: space-between;
+  align-items: center;
 }
 .comboBoxContainer>p{
   font-size: 16px;
